# instance-manager

./: .dockerignore  .flake8  .gitignore  .pylintrc  README.md  pyproject.toml  run-instance-manager.bat  run-instance-manager.sh  run-sheduler.bat  run-sheduler.sh  run.py  scheduler.py  tox.ini  transmit.py
.github/workflows/: linter.yaml  tox.yaml
configs/: ci.ini  dev.ini  worker.ini
docker/CPU/: Dockerfile  transmit.py
docker/GPU/: Dockerfile
docker/scripts/: logging_utils.py  streamer_interface.py  streamer_rtsp.py  transmit.py
docker/scripts/test/: goal_test.py
rtsp/: constants.py  helpers.py  server.py
scripts/test/: video_stream.py  webcam_stream.py
src/config/: __init__.py  app.py  config_env.py  constants.py
src/database/: datasource.py  transaction.py
src/docker_manager/: constants.py  docker_api.py  docker_init.py  exceptions.py
src/docker_manager/scheduler/: scheduler_notification.py  scheduler_notification_message.py  service.py
src/image_processor/: callbacks.py  logging_utils.py  streamer_interface.py  streamer_rtsp.py
src/image_processor/metric/: detection_metric.py  metric_dao.py  metrics_service.py
src/image_processor/processed_stream/: processed_stream.py  (+2 more)
src/instance_manager/: exception.py  exceptions.py  instance.py  instance_dao.py  instance_service.py  transaction.py
src/rabbitmq/: __init__.py  async_rabbitmq_manager.py  constants.py  message_handler.py  rabbit_init.py  rabbitmq_client.py  rabbitmq_handler.py
tests/: db_connectivity_test.py  db_test.py  instance_service_test.py  version_test.py
(+15 files in other folders)
